--- a/Native/index.html
+++ b/Native/index.html
@@ -19,12 +19,17 @@
 
 <div>native.js</div>
 
-<div id="httpDiv">
-    <div><input type="button" value="http" id="http"></div>
+<div id="delegateDiv">
+    <div>
+        <select name="delegate" id="delegate">
+            <option value="javascript">NativeType.javascript</option>
+            <option value="url">NativeType.url</option>
+        </select>
+    </div>
 </div>
 
-<div>
-    <div><input type="button" value="Open" id="open"></div>
+<div id="httpDiv">
+    <div><input type="button" value="http" id="http"></div>
 </div>
 
 <div>
