--- a/Example/index.html
+++ b/Example/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>native.js</title>
     <script src="./js/jquery-3.1.1.min.js"></script>
-    <script src="./../Products/native.js"></script>
+    <script src="./../Products/native.extended.js"></script>
     <script src="./js/js.js"></script>
 
     <style>
