--- a/Example/native.extended/index.html
+++ b/Example/native.extended/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>native.js</title>
-    <script src="./js/jquery-3.1.1.min.js"></script>
-    <script src="./../../Products/native.js"></script>
-    <script src="./js/js.js"></script>
+    <script src="./js/js.min.js"></script>
 
     <style>
         body>div {
